[tool.poetry]
name = "console_app"
version = "0.1.0"
description = ""
authors = ["alisea-natan <liskin.sun@gmail.com>"]
packages = [{include = "hello/*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "hello.main:hi"